--- a/Aight/app/src/main/res/values/strings.xml
+++ b/Aight/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Aight</string>
-    <string name="title_activity_maps_view">What\'s up</string>
+    <string name="title_activity_maps_view">W</string>
 </resources>
