--- a/Aight/app/src/main/res/values/strings.xml
+++ b/Aight/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Aight</string>
     <string name="title_activity_maps">Aight - Here you are</string>
+    <string name="plus_button">+</string>
 </resources>
