--- a/Aight/app/src/main/res/values/strings.xml
+++ b/Aight/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">Aight</string>
     <string name="title_activity_maps">Aight - Here you are</string>
     <string name="plus_button">+</string>
+    <string name="title_activity_create_event">CreateEvent</string>
+
+    <string name="description">Describe your activity</string>
+    <string name="description_hint">(less than 140 characters)</string>
+    <string name="duration">Set the duration</string>
+    <string name="action_settings">Settings</string>
+    <string name="aight">AIGHT</string>
+    <string name="title_activity_second">secondActivity</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
