CreateEvent sends event correctly to parse. StatusBar is colored in 5.0 and up

--- a/Aight/app/src/main/res/values/strings.xml
+++ b/Aight/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">Aight</string>
-    <string name="title_activity_maps">Aight - Here you are</string>
+    <string name="title_activity_maps">Aight</string>
     <string name="plus_button">+</string>
     <string name="title_activity_create_event">CreateEvent</string>
 
     <string name="description">Describe your activity</string>
-    <string name="description_hint">(less than 140 characters)</string>
+    <string name="description_hint">What will you be doing?</string>
     <string name="duration">Set the duration</string>
     <string name="action_settings">Settings</string>
     <string name="aight">AIGHT</string>
