--- a/Aight/app/src/main/res/values/strings.xml
+++ b/Aight/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="error_end">.</string>
     <string name="progress_login">Logging you in&#8230;</string>
     <string name="progress_signup">Signing you up&#8230;</string>
+    <string name="getting_location">Getting location...</string>
     <string name="sign_up">Sign Up</string>
     <string name="log_in">Log In</string>
     <string name="title_activity_log_in">Log In</string>
